making name title cased

--- a/Day_57/templates/guess.html
+++ b/Day_57/templates/guess.html
@@ -7,7 +7,7 @@
     <title>Guess</title>
 </head>
 <body>
-    <h1>Hey {{ na }}</h1>
+    <h1>Hey {{ na.title() }}</h1>
     <h2>I think you are {{ gn }}</h2>
     <h3>And maybe {{ ag }} years old</h3>
 </body>
